<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/milky"
    android:paddingTop="30dp">

    <!--upper layout-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--the ic-menu is added from the vector asset-->

        <!--    menu-->
        <!--        <ImageView-->
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/menu"
        app:tint="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--Title-->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/be_vietnam"
            android:text="@string/application"
            android:textColor="@color/green_dark"
            android:textSize="40sp"
            android:textStyle="bold" />

        <!--subtitle-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/be_vietnam"
            android:text="@string/subtitle"
            android:textColor="@color/green_dark"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:padding="20dp">

        <!--        camera button-->
        <Button
            android:id="@+id/cameraBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/green_1"
            android:background="@drawable/camera"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cameraBtn"
            android:text="@string/camera"
            android:textColor="@color/green_dark"
            android:layout_marginStart="35dp"/>

        <!--        gallery button-->

        <Button
            android:id="@+id/galleryBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/cameraBtn"
            android:backgroundTint="@color/green_1"
            android:background="@drawable/gallery"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/galleryBtn"
            android:layout_toEndOf="@id/cameraBtn"
            android:layout_marginStart="25dp"
            android:text="@string/gallery"
            android:textColor="@color/green_dark" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/previewImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            tools:srcCompat="@drawable/bug" />

    </RelativeLayout>
    <!--Insect pest-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/insectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/pest_Tname"
            android:textColor="@color/green_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pest_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/insectName"
            android:textColor="@color/green_1"
            android:textSize="16sp" />

    </RelativeLayout>

    <!--Pesticide-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/activeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/pesti_name"
            android:textColor="@color/green_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/active_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/activeName"
            android:textColor="@color/green_1"
            android:textSize="16sp" />

    </RelativeLayout>
</LinearLayout>